--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "Jquery": "^3.4.1"
+    "Jquery": "^3.4.1",
+    "bootstrap": "3.4.1",
+    "bootstrap-toggle": "^2.2.2"
   }
 }
