--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "lpt": "^0.4.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "^0.11.0",
     "socket.io": "^2.3.0"
