--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "Jquery": "^3.4.1",
     "bootstrap": "3.4.1",
-    "bootstrap-toggle": "^2.2.2",
-    "material-design-icons": "^3.0.1"
+    "bootstrap-toggle": "^2.2.2"
   }
 }
