--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "Jquery": "^3.4.1",
     "bootstrap": "3.4.1",
-    "bootstrap-toggle": "^2.2.2"
+    "bootstrap-toggle": "^2.2.2",
+    "seiyria-bootstrap-slider": "^10.6.2"
   }
 }
