--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+public/bootstrap
+public/jquery
+public/seiyria-bootstrap-slider
+public/bootstrap-toggle
 
 # TypeScript v1 declaration files
 typings/
